Kubernetes/orderserviceapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: orderserviceapi
  name: orderserviceapi
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: orderserviceapi
    spec:
      containers:
      - env:
        - name: ConnectionString
          value: "Server=tcp:172.20.3.94,31433;Initial Catalog=OrdersDb;User Id=sa;Password=Qweasd123"
        image: kasungunathilaka/orderserviceapi:dev
        name: orderserviceapi
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
