Kubernetes/webspa-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: webspa
  name: webspa
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: webspa
    spec:
      containers:
      - env:
        - name: orders_host_port
          value: "172.20.3.94:32104"
        - name: contacts_host_port
          value: "172.20.3.94:32103"
        image: kasungunathilaka/webspa:test
        name: webspa
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
