Kubernetes/contactserviceapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: contactserviceapi
  name: contactserviceapi
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 32103
  selector:
    io.kompose.service: contactserviceapi
status:
  loadBalancer: {}
