Kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  type: NodePort
  ports:
  - name: "15672"
    port: 15672
    targetPort: 15672
    nodePort: 32672
  - name: "5671"
    port: 5671
    targetPort: 5671
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: rabbitmq
status:
  loadBalancer: {}
