Kubernetes/sqldata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: sqldata
  name: sqldata
spec:
  type: NodePort
  ports:
  - port: 1433
    nodePort: 31433
  selector:
    io.kompose.service: sqldata
status:
  loadBalancer: {}
