Kubernetes/webspa-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: webspa
  name: webspa
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 32102
  selector:
    io.kompose.service: webspa
status:
  loadBalancer: {}
