Kubernetes/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapi
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "ordermgt.system.io"
    http:
      paths:
      - path: /orders
        backend:
          serviceName: orderserviceapi
          servicePort: 80
